tests/NormalTests/paczka1/fuzzy1/65247918.err
Error in line 2: 79JgnMYbsM S984 66,7
Error in line 4: 79JgnMYbsM A306 81,6
Error in line 8: LnM A306 1,4
Error in line 7: Haahisq4tUs S874 91,8
Error in line 5: 79JgnMYbsM S984 44,6
Error in line 20: A306 A726 69,6
